--- a/series.conf
+++ b/series.conf
@@ -45423,6 +45423,7 @@
 	patches.suse/x86-tdx-Zero-out-the-missing-RSI-in-TDX_HYPERCALL-macro.patch
 	patches.suse/x86-tdx-Skip-saving-output-regs-when-SEAMCALL-fails-with-V.patch
 	patches.suse/x86-tdx-Make-macros-of-TDCALLs-consistent-with-the-spec.patch
+	patches.suse/x86-tdx-Rename-__tdx_module_call-to-__tdcall.patch
 	patches.suse/xen-pciback-Consider-INTx-disabled-when-MSI-MSI-X-is.patch
 	patches.suse/badblocks-add-more-helper-structure-and-routines-in--e850.patch
 	patches.suse/badblocks-add-helper-routines-for-badblock-ranges-ha-c3c6.patch
