--- a/series.conf
+++ b/series.conf
@@ -45424,6 +45424,7 @@
 	patches.suse/x86-tdx-Skip-saving-output-regs-when-SEAMCALL-fails-with-V.patch
 	patches.suse/x86-tdx-Make-macros-of-TDCALLs-consistent-with-the-spec.patch
 	patches.suse/x86-tdx-Rename-__tdx_module_call-to-__tdcall.patch
+	patches.suse/x86-tdx-Pass-TDCALL-SEAMCALL-input-output-registers-via-a-.patch
 	patches.suse/xen-pciback-Consider-INTx-disabled-when-MSI-MSI-X-is.patch
 	patches.suse/badblocks-add-more-helper-structure-and-routines-in--e850.patch
 	patches.suse/badblocks-add-helper-routines-for-badblock-ranges-ha-c3c6.patch
