--- a/series.conf
+++ b/series.conf
@@ -40303,6 +40303,7 @@
 	patches.suse/x86-perf-zhaoxin-Add-stepping-check-for-ZXC.patch
 	patches.suse/sched-numa-Stop-an-exhastive-search-if-an-idle-core-is-found.patch
 	patches.suse/cpuidle-poll-Ensure-IRQs-stay-disabled-after-cpuidle_state.patch
+	patches.suse/cpuidle-Move-IRQ-state-validation.patch
 	patches.suse/arch-idle-Change-arch_cpu_idle-behavior-always-exit-with-I.patch
 	patches.suse/sched-fair-Limit-sched-slice-duration.patch
 	patches.suse/sched-fair-sanitize-vruntime-of-entity-being-placed.patch
