- x86/tdx: Remove TDX_HCALL_ISSUE_STI (git-fixes).
- Refresh
  patches.suse/x86-tdx-Do-not-corrupt-frame-pointer-in-__tdx_hyperc.patch.
- Refresh
  patches.suse/x86-tdx-Fix-arch_safe_halt-execution-for-TDX-VMs.patch.
- Refresh
  patches.suse/x86-tdx-Refactor-__tdx_hypercall-to-allow-pass-down-.patch.

--- a/series.conf
+++ b/series.conf
@@ -40305,6 +40305,7 @@
 	patches.suse/cpuidle-poll-Ensure-IRQs-stay-disabled-after-cpuidle_state.patch
 	patches.suse/cpuidle-Move-IRQ-state-validation.patch
 	patches.suse/arch-idle-Change-arch_cpu_idle-behavior-always-exit-with-I.patch
+	patches.suse/x86-tdx-Remove-TDX_HCALL_ISSUE_STI.patch
 	patches.suse/sched-fair-Limit-sched-slice-duration.patch
 	patches.suse/sched-fair-sanitize-vruntime-of-entity-being-placed.patch
 	patches.suse/sched-rt-pick_next_rt_entity-check-list_entry.patch
