- x86/tdx: Drop flags from __tdx_hypercall() (git-fixes).
- Refresh
  patches.suse/msft-hv-2876-x86-hyperv-Support-hypercalls-for-fully-enlightened-.patch.
- Refresh
  patches.suse/msft-hv-2882-x86-hyperv-Use-TDX-GHCI-to-access-some-MSRs-in-a-TDX.patch.
- Refresh
  patches.suse/msft-hv-2884-x86-hyperv-Move-the-code-in-ivm.c-around-to-avoid-un.patch.
- Refresh patches.suse/x86-tdx-Fix-data-leak-in-mmio_read.patch.
- Refresh
  patches.suse/x86-tdx-Make-_tdx_hypercall-and-__tdx_module_call-available-in-boot-stub.patch.
- Refresh
  patches.suse/x86-tdx-Pass-TDCALL-SEAMCALL-input-output-registers-via-a-.patch.
- Refresh
  patches.suse/x86-tdx-Rename-__tdx_module_call-to-__tdcall.patch.
- Refresh
  patches.suse/x86-tdx-Zero-out-the-missing-RSI-in-TDX_HYPERCALL-macro.patch.

--- a/series.conf
+++ b/series.conf
@@ -42284,6 +42284,7 @@
 	patches.suse/mm-avoid-passing-0-to-__ffs.patch
 	patches.suse/sched-isolation-add_cpu_is_isolated.patch
 	patches.suse/x86-boot-Centralize-__pa-__va-definitions.patch
+	patches.suse/x86-tdx-Drop-flags-from-__tdx_hypercall.patch
 	patches.suse/msft-hv-2785-x86-hyperv-Mark-hv_ghcb_terminate-as-noreturn.patch
 	patches.suse/sched-fair-Fix-inaccurate-tally-of-ttwu_move_affine.patch
 	patches.suse/ring-buffer-Ensure-proper-resetting-of-atomic-variables-in-ring_buffer_reset_online_cpus.patch
