- x86/tdx: Retry partially-completed page conversion hypercalls (git-fixes).
- Refresh
  patches.suse/virt-tdx-guest-Add-Quote-generation-support-using-TSM_REPORTS.patch.

--- a/series.conf
+++ b/series.conf
@@ -45425,6 +45425,7 @@
 	patches.suse/drm-amd-check-num-of-link-levels-when-update-pcie-pa.patch
 	patches.suse/drivers-perf-hisi-use-cpuhp_state_remove_instance_no.patch
 	patches.suse/perf-hisi-Fix-use-after-free-when-register-pmu-fails.patch
+	patches.suse/x86-tdx-Retry-partially-completed-page-conversion-hypercal.patch
 	patches.suse/x86-tdx-Zero-out-the-missing-RSI-in-TDX_HYPERCALL-macro.patch
 	patches.suse/x86-tdx-Skip-saving-output-regs-when-SEAMCALL-fails-with-V.patch
 	patches.suse/x86-tdx-Make-macros-of-TDCALLs-consistent-with-the-spec.patch
