--- a/series.conf
+++ b/series.conf
@@ -45432,6 +45432,7 @@
 	patches.suse/x86-tdx-Rename-__tdx_module_call-to-__tdcall.patch
 	patches.suse/x86-tdx-Pass-TDCALL-SEAMCALL-input-output-registers-via-a-.patch
 	patches.suse/x86-tdx-Extend-TDX_MODULE_CALL-to-support-more-TDCALL-SEAM.patch
+	patches.suse/x86-tdx-Make-TDX_HYPERCALL-asm-similar-to-TDX_MODULE_CALL.patch
 	patches.suse/xen-pciback-Consider-INTx-disabled-when-MSI-MSI-X-is.patch
 	patches.suse/badblocks-add-more-helper-structure-and-routines-in--e850.patch
 	patches.suse/badblocks-add-helper-routines-for-badblock-ranges-ha-c3c6.patch
