--- a/series.conf
+++ b/series.conf
@@ -45434,6 +45434,7 @@
 	patches.suse/x86-tdx-Extend-TDX_MODULE_CALL-to-support-more-TDCALL-SEAM.patch
 	patches.suse/x86-tdx-Make-TDX_HYPERCALL-asm-similar-to-TDX_MODULE_CALL.patch
 	patches.suse/x86-tdx-Reimplement-__tdx_hypercall-using-TDX_MODULE_CALL-.patch
+	patches.suse/x86-tdx-Remove-struct-tdx_hypercall_args.patch
 	patches.suse/xen-pciback-Consider-INTx-disabled-when-MSI-MSI-X-is.patch
 	patches.suse/badblocks-add-more-helper-structure-and-routines-in--e850.patch
 	patches.suse/badblocks-add-helper-routines-for-badblock-ranges-ha-c3c6.patch
