--- a/series.conf
+++ b/series.conf
@@ -45436,6 +45436,7 @@
 	patches.suse/x86-tdx-Reimplement-__tdx_hypercall-using-TDX_MODULE_CALL-.patch
 	patches.suse/x86-tdx-Remove-struct-tdx_hypercall_args.patch
 	patches.suse/x86-virt-tdx-Wire-up-basic-SEAMCALL-functions.patch
+	patches.suse/x86-virt-tdx-Make-TDX_MODULE_CALL-handle-SEAMCALL-UD-and-G.patch
 	patches.suse/xen-pciback-Consider-INTx-disabled-when-MSI-MSI-X-is.patch
 	patches.suse/badblocks-add-more-helper-structure-and-routines-in--e850.patch
 	patches.suse/badblocks-add-helper-routines-for-badblock-ranges-ha-c3c6.patch
