x86/tdx: Fix __noreturn build warning around __tdx_hypercall_failed() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -45437,6 +45437,7 @@
 	patches.suse/x86-tdx-Remove-struct-tdx_hypercall_args.patch
 	patches.suse/x86-virt-tdx-Wire-up-basic-SEAMCALL-functions.patch
 	patches.suse/x86-virt-tdx-Make-TDX_MODULE_CALL-handle-SEAMCALL-UD-and-G.patch
+	patches.suse/x86-tdx-Fix-__noreturn-build-warning-around-__tdx_hypercal.patch
 	patches.suse/xen-pciback-Consider-INTx-disabled-when-MSI-MSI-X-is.patch
 	patches.suse/badblocks-add-more-helper-structure-and-routines-in--e850.patch
 	patches.suse/badblocks-add-helper-routines-for-badblock-ranges-ha-c3c6.patch
