--- a/series.conf
+++ b/series.conf
@@ -46227,6 +46227,7 @@
 	patches.suse/thermal-intel-hfi-Refactor-enabling-code-into-helper.patch
 	patches.suse/thermal-intel-hfi-Enable-an-HFI-instance-from-its-fi.patch
 	patches.suse/thermal-intel-hfi-Disable-an-HFI-instance-when-all-i.patch
+	patches.suse/cpuidle-haltpoll-Do-not-enable-interrupts-when-entering-id.patch
 	patches.suse/PM-devfreq-Fix-buffer-overflow-in-trans_stat_show.patch
 	patches.suse/PM-devfreq-Synchronize-devfreq_monitor_-start-stop.patch
 	patches.suse/PM-hibernate-Enforce-ordering-during-image-compressi.patch
