perf list: Add IBM z17 event descriptions (jsc#PED-13611).

--- a/series.conf
+++ b/series.conf
@@ -11770,6 +11770,7 @@
 	patches.suse/vsock-virtio-Resize-receive-buffers-so-that-each-SKB.patch
 	patches.suse/perf-trace-Remove-map-dump-documentation.patch
 	patches.suse/perf-parse-events-Set-default-GH-modifier-properly.patch
+	patches.suse/perf-list-Add-IBM-z17-event-descriptions.patch
 	patches.suse/perf-dso-Add-missed-dso__put-to-dso__load_kcore.patch
 	patches.suse/perf-sched-Make-sure-it-frees-the-usage-string.patch
 	patches.suse/perf-sched-Free-thread-priv-using-priv_destructor.patch
