--- a/series.conf
+++ b/series.conf
@@ -35467,6 +35467,7 @@
 	patches.suse/clk-qcom-camcc-sm6350-Fix-PLL-config-of-PLL2.patch
 	patches.suse/i3c-master-svc-Prevent-incomplete-IBI-transaction.patch
 	patches.suse/phy-broadcom-bcm63xx-usbh-fix-section-mismatches.patch
+	patches.suse/phy-renesas-rcar-gen3-usb2-Fix-an-error-handling-pat.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
