--- a/series.conf
+++ b/series.conf
@@ -35468,6 +35468,7 @@
 	patches.suse/i3c-master-svc-Prevent-incomplete-IBI-transaction.patch
 	patches.suse/phy-broadcom-bcm63xx-usbh-fix-section-mismatches.patch
 	patches.suse/phy-renesas-rcar-gen3-usb2-Fix-an-error-handling-pat.patch
+	patches.suse/pinctrl-stm32-fix-hwspinlock-resource-leak-in-probe-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
