--- a/series.conf
+++ b/series.conf
@@ -35466,6 +35466,7 @@
 	patches.suse/clk-qcom-camcc-sm6350-Specify-Titan-GDSC-power-domai.patch
 	patches.suse/clk-qcom-camcc-sm6350-Fix-PLL-config-of-PLL2.patch
 	patches.suse/i3c-master-svc-Prevent-incomplete-IBI-transaction.patch
+	patches.suse/phy-broadcom-bcm63xx-usbh-fix-section-mismatches.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
