--- a/series.conf
+++ b/series.conf
@@ -13849,6 +13849,7 @@
 	patches.suse/i3c-master-svc-Prevent-incomplete-IBI-transaction.patch
 	patches.suse/phy-broadcom-bcm63xx-usbh-fix-section-mismatches.patch
 	patches.suse/phy-renesas-rcar-gen3-usb2-Fix-an-error-handling-pat.patch
+	patches.suse/phy-freescale-Initialize-priv-lock.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
