--- a/series.conf
+++ b/series.conf
@@ -13855,6 +13855,7 @@
 	patches.suse/pinctrl-stm32-fix-hwspinlock-resource-leak-in-probe-.patch
 	patches.suse/pinctrl-renesas-rzg2l-Fix-PMC-restore.patch
 	patches.suse/pinctrl-single-Fix-incorrect-type-for-error-return-v.patch
+	patches.suse/hwmon-w83791d-Convert-macros-to-functions-to-avoid-T.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
