--- a/series.conf
+++ b/series.conf
@@ -13853,6 +13853,7 @@
 	patches.suse/phy-rockchip-samsung-hdptx-Reduce-ROPLL-loop-bandwid.patch
 	patches.suse/phy-rockchip-samsung-hdptx-Prevent-Inter-Pair-Skew-f.patch
 	patches.suse/pinctrl-stm32-fix-hwspinlock-resource-leak-in-probe-.patch
+	patches.suse/pinctrl-renesas-rzg2l-Fix-PMC-restore.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
