--- a/series.conf
+++ b/series.conf
@@ -13847,6 +13847,7 @@
 	patches.suse/clk-qcom-Mark-camcc_sm7150_hws-static.patch
 	patches.suse/i3c-fix-refcount-inconsistency-in-i3c_master_registe.patch
 	patches.suse/i3c-master-svc-Prevent-incomplete-IBI-transaction.patch
+	patches.suse/phy-broadcom-bcm63xx-usbh-fix-section-mismatches.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
