phy: rockchip: samsung-hdptx: Prevent Inter-Pair Skew from exceeding the limits (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13851,6 +13851,7 @@
 	patches.suse/phy-renesas-rcar-gen3-usb2-Fix-an-error-handling-pat.patch
 	patches.suse/phy-freescale-Initialize-priv-lock.patch
 	patches.suse/phy-rockchip-samsung-hdptx-Reduce-ROPLL-loop-bandwid.patch
+	patches.suse/phy-rockchip-samsung-hdptx-Prevent-Inter-Pair-Skew-f.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
