--- a/series.conf
+++ b/series.conf
@@ -13850,6 +13850,7 @@
 	patches.suse/phy-broadcom-bcm63xx-usbh-fix-section-mismatches.patch
 	patches.suse/phy-renesas-rcar-gen3-usb2-Fix-an-error-handling-pat.patch
 	patches.suse/phy-freescale-Initialize-priv-lock.patch
+	patches.suse/phy-rockchip-samsung-hdptx-Reduce-ROPLL-loop-bandwid.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
