pinctrl: single: Fix incorrect type for error return variable (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13854,6 +13854,7 @@
 	patches.suse/phy-rockchip-samsung-hdptx-Prevent-Inter-Pair-Skew-f.patch
 	patches.suse/pinctrl-stm32-fix-hwspinlock-resource-leak-in-probe-.patch
 	patches.suse/pinctrl-renesas-rzg2l-Fix-PMC-restore.patch
+	patches.suse/pinctrl-single-Fix-incorrect-type-for-error-return-v.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
