--- a/series.conf
+++ b/series.conf
@@ -13852,6 +13852,7 @@
 	patches.suse/phy-freescale-Initialize-priv-lock.patch
 	patches.suse/phy-rockchip-samsung-hdptx-Reduce-ROPLL-loop-bandwid.patch
 	patches.suse/phy-rockchip-samsung-hdptx-Prevent-Inter-Pair-Skew-f.patch
+	patches.suse/pinctrl-stm32-fix-hwspinlock-resource-leak-in-probe-.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
