- Bluetooth: HCI: Fix tracking of advertisement set/instance 0x00   (git-fixes). - Refresh   patches.suse/Bluetooth-hci_core-Fix-tracking-of-periodic-advertis.patch.

--- a/series.conf
+++ b/series.conf
@@ -13415,6 +13415,7 @@
 	patches.suse/Bluetooth-hci_sync-fix-race-in-hci_cmd_sync_dequeue_.patch
 	patches.suse/Bluetooth-ISO-Fix-BIS-connection-dst_type-handling.patch
 	patches.suse/Bluetooth-btmtksdio-Add-pmctrl-handling-for-BT-close.patch
+	patches.suse/Bluetooth-HCI-Fix-tracking-of-advertisement-set-inst.patch
 	patches.suse/Revert-Bluetooth-L2CAP-convert-timeouts-to-secs_to_j.patch
 	patches.suse/Bluetooth-ISO-Fix-another-instance-of-dst_type-handl.patch
 	patches.suse/Bluetooth-btintel_pcie-Fix-event-packet-loss-issue.patch
