- Bluetooth: btusb: mediatek: Fix kernel crash when releasing   mtk iso interface (git-fixes). - Refresh   patches.suse/Bluetooth-btusb-mediatek-Avoid-btusb_mtk_claim_iso_i.patch.

--- a/series.conf
+++ b/series.conf
@@ -13617,6 +13617,7 @@
 	patches.suse/ALSA-usb-audio-fix-uac2-clock-source-at-terminal-par.patch
 	patches.suse/platform-x86-intel-punit_ipc-fix-memory-corruption.patch
 	patches.suse/net-phy-mxl-gpy-fix-bogus-error-on-USXGMII-and-integ.patch
+	patches.suse/Bluetooth-btusb-mediatek-Fix-kernel-crash-when-relea.patch
 	patches.suse/Bluetooth-hci_core-Fix-triggering-cmd_timer-for-HCI_.patch
 	patches.suse/Bluetooth-hci_sock-Prevent-race-in-socket-write-iter.patch
 	patches.suse/Bluetooth-btusb-mediatek-Avoid-btusb_mtk_claim_iso_i.patch
