--- a/series.conf
+++ b/series.conf
@@ -14396,6 +14396,7 @@
 	patches.kabi/kabi-hide-dst_entry-dev_rcu.patch
 	patches.kabi/Bluetooth-HCI-Fix-tracking-of-advertisement-set-inst.patch
 	patches.kabi/Bluetooth-btusb-mediatek-Fix-kernel-crash-when-relea.patch
+	patches.kabi/Bluetooth-MGMT-fix-crash-in-set_mesh_sync-and-set_me.patch
 
 	########################################################
 	# preempt-rt backport converged
