kABI workaround for hci_conn remote_id removal (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14394,6 +14394,7 @@
 	patches.kabi/KVM-s390-kABI-backport-for-last_sleep_cpu.patch
 	patches.kabi/kabi-hide-dst_entry-dev_rcu.patch
 	patches.kabi/Bluetooth-HCI-Fix-tracking-of-advertisement-set-inst.patch
+	patches.kabi/Bluetooth-btusb-mediatek-Fix-kernel-crash-when-relea.patch
 
 	########################################################
 	# preempt-rt backport converged
