ipmi: Fix handling of messages with provided receive message pointer (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35112,6 +35112,7 @@
 	patches.suse/rtc-optee-fix-memory-leak-on-driver-removal.patch
 	patches.suse/rtc-interface-Fix-long-standing-race-when-setting-al.patch
 	patches.suse/rtc-interface-Ensure-alarm-irq-is-enabled-when-UIE-i.patch
+	patches.suse/ipmi-Fix-handling-of-messages-with-provided-receive-.patch
 	patches.suse/NFSD-Define-a-proc_layoutcommit-for-the-FlexFiles-layout-type.patch
 	patches.suse/vfs-Don-t-leak-disconnected-dentries-on-umount.patch
 	patches.suse/r8169-fix-packet-truncation-after-S4-resume-on-RTL81.patch
