spi: tegra210-quad: Check hardware status on timeout (bsc#1253155)

--- a/series.conf
+++ b/series.conf
@@ -13530,6 +13530,7 @@
 	patches.suse/can-sun4i_can-sun4i_can_interrupt-fix-max-irq-loop-h.patch
 	patches.suse/spi-tegra210-quad-Fix-timeout-handling.patch
 	patches.suse/spi-tegra210-quad-Refactor-error-handling-into-helper-func.patch
+	patches.suse/spi-tegra210-quad-Check-hardware-status-on-timeout.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
