--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1353,3 +1353,5 @@ cefcd4fe2e3aaf792c14c9e56dab89e3d7a65d02 # CVE-2024-35803 not applicable https:/
 1071d560afb4c245c2076494226df47db5a35708 # CVE-2025-39940 https://bugzilla.suse.com/show_bug.cgi?id=1251077#c2
 b83699ea1e62951857c2d8648bd93a4744899eb7 # we don't have loongarch
 8237c01f1696bc53c470493bf1fe092a107648a6 # CVE-2022-50552 wontfix https://bugzilla.suse.com/show_bug.cgi?id=1251733#c5
+3708c7269593b836b1d684214cd9f5d83e4ed3fd # only necessary if CONFIG_DM_VERITY=y
+
