dm-verity: fix unreliable memory allocation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13510,6 +13510,7 @@
 	patches.suse/nvmet-auth-update-sc_c-in-target-host-hash-calculati.patch
 	patches.suse/Input-pegasus-notetaker-fix-potential-out-of-bounds-.patch
 	patches.suse/Input-imx_sc_key-fix-memory-corruption-on-unload.patch
+	patches.suse/dm-verity-fix-unreliable-memory-allocation.patch
 	patches.suse/ALSA-usb-audio-fix-uac2-clock-source-at-terminal-par.patch
 	patches.suse/platform-x86-intel-punit_ipc-fix-memory-corruption.patch
 	patches.suse/net-phy-mxl-gpy-fix-bogus-error-on-USXGMII-and-integ.patch
