arm64: sysreg: Correct sign definitions for EIESB and DoubleLock (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -12476,6 +12476,7 @@
 	patches.suse/arm64-errata-Apply-workarounds-for-Neoverse-V3AE.patch
 	patches.suse/arm64-map-_text-_stext-virtual-address-range-non-executabl.patch
 	patches.suse/perf-arm_spe-Prevent-overflow-in-PERF_IDX2OFF.patch
+	patches.suse/arm64-sysreg-Correct-sign-definitions-for-EIESB-and-Double.patch
 	patches.suse/powerpc-pseries-msi-Fix-potential-underflow-and-leak-issue.patch
 	patches.suse/powerpc-powernv-pci-Fix-underflow-and-leak-issue.patch
 	patches.suse/powerpc-ftrace-ensure-ftrace-record-ops-are-always-set-for-NOPs.patch
