--- a/series.conf
+++ b/series.conf
@@ -12596,6 +12596,7 @@
 	patches.suse/thermal-gov_step_wise-Allow-cooling-level-to-be-redu.patch
 	patches.suse/thermal-intel-selftests-workload_hint-Mask-unsupport.patch
 	patches.suse/thermal-drivers-qcom-lmh-Add-missing-IRQ-includes.patch
+	patches.suse/arm64-dts-broadcom-bcm2712-Add-default-GIC-address-cells.patch
 	patches.suse/arm64-dts-imx93-kontron-Fix-GPIO-for-panel-regulator.patch
 	patches.suse/arm64-dts-imx93-kontron-Fix-USB-port-assignment.patch
 	patches.suse/arm64-dts-imx95-Correct-the-lpuart7-and-lpuart8-srcid.patch
