--- a/series.conf
+++ b/series.conf
@@ -12598,6 +12598,7 @@
 	patches.suse/thermal-drivers-qcom-lmh-Add-missing-IRQ-includes.patch
 	patches.suse/arm64-dts-broadcom-bcm2712-Add-default-GIC-address-cells.patch
 	patches.suse/arm64-zynqmp-Disable-coresight-by-default.patch
+	patches.suse/arm64-zynqmp-Revert-usb-node-drive-strength-and-slew-rate-.patch
 	patches.suse/arm64-dts-imx93-kontron-Fix-GPIO-for-panel-regulator.patch
 	patches.suse/arm64-dts-imx93-kontron-Fix-USB-port-assignment.patch
 	patches.suse/arm64-dts-imx95-Correct-the-lpuart7-and-lpuart8-srcid.patch
