arm64: zynqmp: Fix usb node drive strength and slew rate (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -4317,6 +4317,7 @@
 	patches.suse/arm64-dts-rockchip-Assign-ES8316-MCLK-rate-on-r.patch
 	patches.suse/arm64-dts-rockchip-Fix-compatible-for-Bluetooth.patch
 	patches.suse/Revert-arm64-dts-zynqmp-Add-address-cells-property-to-interrupt-controllers.patch
+	patches.suse/arm64-zynqmp-Fix-usb-node-drive-strength-and-slew-rate.patch
 	patches.suse/arm64-dts-ti-k3-j7200-Fix-physical-address-of-p.patch
 	patches.suse/arm64-dts-ti-k3-j721e-beagleboneai64-Fix-mailbo.patch
 	patches.suse/arm64-dts-ti-k3-j784s4-evm-Fix-main_i2c0-alias.patch
