spi: tegra210-quad: Add support for internal DMA (git-fixes)

--- a/series.conf
+++ b/series.conf
@@ -32908,6 +32908,7 @@
 	patches.suse/spi-tegra210-quad-modify-chip-select-CS-deactivation.patch
 	patches.suse/spi-tegra210-quad-Update-dummy-sequence-configuration.patch
 	patches.suse/PM-runtime-Add-new-devm-functions.patch
+	patches.suse/spi-tegra210-quad-Add-support-for-internal-DMA.patch
 	patches.suse/spi-sh-msiof-Fix-maximum-DMA-transfer-size.patch
 	patches.suse/power-supply-collie-Fix-wakeup-source-leaks-on-devic.patch
 	patches.suse/power-reset-at91-reset-Optimize-at91_reset.patch
