--- a/series.conf
+++ b/series.conf
@@ -33394,6 +33394,7 @@
 	patches.suse/wifi-ath6kl-remove-WARN-on-bad-firmware-input.patch
 	patches.suse/wifi-carl9170-do-not-ping-device-which-has-failed-to.patch
 	patches.suse/regulator-fan53555-add-enable_time-support-and-soft-.patch
+	patches.suse/spi-tegra210-qspi-Remove-cache-operations.patch
 	patches.suse/drm-msm-disp-Correct-porch-timing-for-SDM845.patch
 	patches.suse/drm-msm-dsi-dsi_phy_10nm-Fix-missing-initial-VCO-rat.patch
 	patches.suse/drm-msm-Fix-a-fence-leak-in-submit-error-path.patch
