--- a/series.conf
+++ b/series.conf
@@ -35414,6 +35414,7 @@
 	patches.suse/regulator-core-disable-supply-if-enabling-main-regul.patch
 	patches.suse/regulator-core-Protect-regulator_supply_alias_list-w.patch
 	patches.suse/spi-tegra210-quad-Fix-timeout-handling.patch
+	patches.suse/spi-tegra210-quad-Refactor-error-handling-into-helper-func.patch
 	patches.suse/spi-bcm63xx-drop-wrong-casts-in-probe.patch
 	patches.suse/hwmon-sy7636a-Fix-regulator_enable-resource-leak-on-.patch
 	patches.suse/hwmon-w83l786ng-Convert-macros-to-functions-to-avoid.patch
