spi: tegra210-quad: Check hardware status on timeout (bsc#1253155)

--- a/series.conf
+++ b/series.conf
@@ -35415,6 +35415,7 @@
 	patches.suse/regulator-core-Protect-regulator_supply_alias_list-w.patch
 	patches.suse/spi-tegra210-quad-Fix-timeout-handling.patch
 	patches.suse/spi-tegra210-quad-Refactor-error-handling-into-helper-func.patch
+	patches.suse/spi-tegra210-quad-Check-hardware-status-on-timeout.patch
 	patches.suse/spi-bcm63xx-drop-wrong-casts-in-probe.patch
 	patches.suse/hwmon-sy7636a-Fix-regulator_enable-resource-leak-on-.patch
 	patches.suse/hwmon-w83l786ng-Convert-macros-to-functions-to-avoid.patch
