--- a/series.conf
+++ b/series.conf
@@ -12527,6 +12527,7 @@
 	patches.suse/fs-proc-task_mmu-check-p-vec_buf-for-NULL.patch
 	patches.suse/i2c-riic-Allow-setting-frequencies-lower-than-50KHz.patch
 	patches.suse/listmount-don-t-call-path_put-under-namespace-semaph.patch
+	patches.suse/mount-handle-NULL-values-in-mnt_ns_release.patch
 	patches.suse/pid-Add-a-judgment-for-ns-null-in-pid_nr_ns.patch
 	patches.suse/writeback-Avoid-contention-on-wb-list_lock-when-swit.patch
 	patches.suse/writeback-Avoid-softlockup-when-switching-many-inode.patch
