selftests: net: include forwarding lib (bsc#1254235).

--- a/series.conf
+++ b/series.conf
@@ -29212,6 +29212,7 @@
 	patches.suse/bnxt_en-Add-support-for-user-configured-RSS-key.patch
 	patches.suse/bnxt_en-Invalidate-user-filters-when-needed.patch
 	patches.suse/bnxt_en-Add-RSS-support-for-IPSEC-headers.patch
+	patches.suse/selftests-net-include-forwarding-lib.patch
 	patches.suse/bnx2x-convert-EEE-handling-to-use-linkmode-bitmaps.patch
 	patches.suse/net-atlantic-convert-EEE-handling-to-use-linkmode-bi.patch
 	patches.suse/igc-Use-reverse-xmas-tree.patch
