ACPI: PRM: Remove unnecessary strict handler address checks (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50392,6 +50392,7 @@
 	patches.suse/netem-Update-sch-q.qlen-before-qdisc_tree_reduce_backlog.patch
 	patches.suse/x86-xen-fix-xen_hypercall_hvm-to-not-clobber-rbx.patch
 	patches.suse/x86-xen-add-FRAME_END-to-xen_hypercall_hvm.patch
+	patches.suse/ACPI-PRM-Remove-unnecessary-strict-handler-address-checks.patch
 	patches.suse/msft-hv-3159-scsi-storvsc-Set-correct-data-length-for-sending-SCS.patch
 	patches.suse/vrf-use-RCU-protection-in-l3mdev_l3_out.patch
 	patches.suse/idpf-call-set_real_num_queues-in-idpf_open.patch
