--- a/series.conf
+++ b/series.conf
@@ -50540,6 +50540,7 @@
 	patches.suse/HID-asus-fix-UAF-via-HID_CLAIMED_INPUT-validation.patch
 	patches.suse/KVM-x86-use-array_index_nospec-with-indices-that-com.patch
 	patches.suse/Bluetooth-Fix-use-after-free-in-l2cap_sock_cleanup_l.patch
+	patches.suse/ACPI-IORT-Fix-memory-leak-in-iort_rmr_alloc_sids.patch
 	patches.suse/dmaengine-idxd-Fix-refcount-underflow-on-module-unlo.patch
 	patches.suse/dmaengine-ti-edma-Fix-memory-allocation-size-for-que.patch
 	patches.suse/cnic-Fix-use-after-free-bugs-in-cnic_delete_task.patch
