ACPI: property: Fix buffer properties extraction for subnodes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50551,6 +50551,7 @@
 	patches.suse/octeontx2-pf-Fix-potential-use-after-free-in-otx2_tc_add_f.patch
 	patches.suse/fbcon-fix-integer-overflow-in-fbcon_do_set_font.patch
 	patches.suse/fbcon-Fix-OOB-access-in-font-allocation.patch
+	patches.suse/ACPI-property-Fix-buffer-properties-extraction-for-subnodes.patch
 	patches.suse/ASoC-Intel-bytcr_rt5640-Fix-invalid-quirk-input-mapp.patch
 	patches.suse/ASoC-Intel-bytcr_rt5651-Fix-invalid-quirk-input-mapp.patch
 	patches.suse/net-mana-Use-page-pool-fragments-for-RX-buffers-inst.patch
