--- a/series.conf
+++ b/series.conf
@@ -50552,6 +50552,7 @@
 	patches.suse/fbcon-fix-integer-overflow-in-fbcon_do_set_font.patch
 	patches.suse/fbcon-Fix-OOB-access-in-font-allocation.patch
 	patches.suse/ACPI-property-Fix-buffer-properties-extraction-for-subnodes.patch
+	patches.suse/ACPI-property-Do-not-pass-NULL-handles-to-acpi_attach_data.patch
 	patches.suse/ASoC-Intel-bytcr_rt5640-Fix-invalid-quirk-input-mapp.patch
 	patches.suse/ASoC-Intel-bytcr_rt5651-Fix-invalid-quirk-input-mapp.patch
 	patches.suse/net-mana-Use-page-pool-fragments-for-RX-buffers-inst.patch
