--- a/series.conf
+++ b/series.conf
@@ -50489,6 +50489,7 @@
 	patches.suse/net_sched-prio-fix-a-race-in-prio_tune.patch
 	patches.suse/posix-cpu-timers-fix-race-between-handle_posix_cpu_timers-.patch
 	patches.suse/msft-hv-3282-scsi-storvsc-Increase-the-timeouts-to-storvsc_timeou.patch
+	patches.suse/platform-x86-intel-uncore-freq-Fail-module-load-when-plat_info-is-NULL.patch
 	patches.suse/tipc-fix-null-ptr-deref-when-acquiring-remote-ip-of-.patch
 	patches.suse/calipso-Fix-null-ptr-deref-in-calipso_req_-set-del-attr.patch
 	patches.suse/net-atm-add-lec_mutex.patch
