--- a/series.conf
+++ b/series.conf
@@ -35478,6 +35478,7 @@
 	patches.suse/hwmon-w83791d-Convert-macros-to-functions-to-avoid-T.patch
 	patches.suse/platform-x86-asus-wmi-use-brightness_set_blocking-fo.patch
 	patches.suse/i2c-i2c.h-fix-a-bad-kernel-doc-line.patch
+	patches.suse/i2c-amd-mp2-fix-reference-leak-in-MP2-PCI-device.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
