platform/x86: asus-wmi: use brightness_set_blocking() for kbd led (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35476,6 +35476,7 @@
 	patches.suse/phy-renesas-rcar-gen3-usb2-Fix-an-error-handling-pat.patch
 	patches.suse/pinctrl-stm32-fix-hwspinlock-resource-leak-in-probe-.patch
 	patches.suse/hwmon-w83791d-Convert-macros-to-functions-to-avoid-T.patch
+	patches.suse/platform-x86-asus-wmi-use-brightness_set_blocking-fo.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
