i2c: i2c.h: fix a bad kernel-doc line (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35477,6 +35477,7 @@
 	patches.suse/pinctrl-stm32-fix-hwspinlock-resource-leak-in-probe-.patch
 	patches.suse/hwmon-w83791d-Convert-macros-to-functions-to-avoid-T.patch
 	patches.suse/platform-x86-asus-wmi-use-brightness_set_blocking-fo.patch
+	patches.suse/i2c-i2c.h-fix-a-bad-kernel-doc-line.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
