--- a/series.conf
+++ b/series.conf
@@ -13890,6 +13890,7 @@
 	patches.suse/hwmon-w83791d-Convert-macros-to-functions-to-avoid-T.patch
 	patches.suse/docs-hwmon-fix-link-to-g762-devicetree-binding.patch
 	patches.suse/platform-x86-intel-pmc-Update-Arrow-Lake-telemetry-G.patch
+	patches.suse/platform-x86-asus-wmi-use-brightness_set_blocking-fo.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
