--- a/series.conf
+++ b/series.conf
@@ -13892,6 +13892,7 @@
 	patches.suse/platform-x86-intel-pmc-Update-Arrow-Lake-telemetry-G.patch
 	patches.suse/platform-x86-asus-wmi-use-brightness_set_blocking-fo.patch
 	patches.suse/i2c-i2c.h-fix-a-bad-kernel-doc-line.patch
+	patches.suse/i2c-amd-mp2-fix-reference-leak-in-MP2-PCI-device.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
