platform/x86:intel/pmc: Update Arrow Lake telemetry GUID (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13889,6 +13889,7 @@
 	patches.suse/pinctrl-single-Fix-incorrect-type-for-error-return-v.patch
 	patches.suse/hwmon-w83791d-Convert-macros-to-functions-to-avoid-T.patch
 	patches.suse/docs-hwmon-fix-link-to-g762-devicetree-binding.patch
+	patches.suse/platform-x86-intel-pmc-Update-Arrow-Lake-telemetry-G.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
