--- a/series.conf
+++ b/series.conf
@@ -13891,6 +13891,7 @@
 	patches.suse/docs-hwmon-fix-link-to-g762-devicetree-binding.patch
 	patches.suse/platform-x86-intel-pmc-Update-Arrow-Lake-telemetry-G.patch
 	patches.suse/platform-x86-asus-wmi-use-brightness_set_blocking-fo.patch
+	patches.suse/i2c-i2c.h-fix-a-bad-kernel-doc-line.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
