--- a/series.conf
+++ b/series.conf
@@ -13531,6 +13531,7 @@
 	patches.suse/can-gs_usb-gs_usb_receive_bulk_callback-check-actual.patch
 	patches.suse/can-gs_usb-gs_usb_receive_bulk_callback-check-actual-395d988.patch
 	patches.suse/can-sun4i_can-sun4i_can_interrupt-fix-max-irq-loop-h.patch
+	patches.suse/exfat-fix-refcount-leak-in-exfat_find.patch
 
 	# tip/tip
 	patches.suse/sched-fair-Skip-sched_balance_running-cmpxchg-when-balance-is-not-due.patch
