--- a/series.conf
+++ b/series.conf
@@ -35269,6 +35269,7 @@
 	patches.suse/ACPI-CPPC-Check-_CPC-validity-for-only-the-online-CP.patch
 	patches.suse/ACPI-CPPC-Perform-fast-check-switch-only-for-online-.patch
 	patches.suse/ACPI-CPPC-Limit-perf-ctrs-in-PCC-check-only-to-onlin.patch
+	patches.suse/cpufreq-intel_pstate-Check-IDA-only-before-MSR_IA32_PERF_CTL-writes.patch
 	patches.suse/crypto-hisilicon-qm-Fix-device-reference-leak-in-qm_.patch
 	patches.suse/ALSA-usb-audio-Fix-potential-overflow-of-PCM-transfe.patch
 	patches.suse/ALSA-usb-audio-Fix-NULL-pointer-dereference-in-snd_u.patch
