regulator: fixed: Rely on the core freeing the enable GPIO (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13901,6 +13901,7 @@
 	patches.suse/platform-x86-asus-wmi-use-brightness_set_blocking-fo.patch
 	patches.suse/i2c-i2c.h-fix-a-bad-kernel-doc-line.patch
 	patches.suse/i2c-amd-mp2-fix-reference-leak-in-MP2-PCI-device.patch
+	patches.suse/regulator-fixed-Rely-on-the-core-freeing-the-enable-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
