kABI workaround for HCI_LE_ADV_0 addition (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -14392,6 +14392,7 @@
 	patches.kabi/usb-acpi-fix-device-link-removal.patch
 	patches.kabi/KVM-s390-kABI-backport-for-last_sleep_cpu.patch
 	patches.kabi/kabi-hide-dst_entry-dev_rcu.patch
+	patches.kabi/Bluetooth-HCI-Fix-tracking-of-advertisement-set-inst.patch
 
 	########################################################
 	# preempt-rt backport converged
