kABI workaround for hci_conn remote_id removal (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57605,6 +57605,7 @@
 	patches.kabi/kabi-fix-sch_qfq-Fix-null-deref-in-agg_dequeue.patch
 	patches.kabi/kabi-hide-dst_entry-dev_rcu.patch
 	patches.kabi/KVM-s390-kABI-backport-for-last_sleep_cpu.patch
+	patches.kabi/Bluetooth-btusb-mediatek-Fix-kernel-crash-when-relea.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
