--- a/series.conf
+++ b/series.conf
@@ -56651,6 +56651,7 @@
 	patches.suse/Bluetooth-hci_sync-fix-race-in-hci_cmd_sync_dequeue_.patch
 	patches.suse/Bluetooth-btmtksdio-Add-pmctrl-handling-for-BT-close.patch
 	patches.suse/Bluetooth-HCI-Fix-tracking-of-advertisement-set-inst.patch
+	patches.suse/Bluetooth-MGMT-fix-crash-in-set_mesh_sync-and-set_me.patch
 	patches.suse/Bluetooth-ISO-Fix-another-instance-of-dst_type-handl.patch
 	patches.suse/Bluetooth-btintel_pcie-Fix-event-packet-loss-issue.patch
 	patches.suse/Bluetooth-hci_core-Fix-tracking-of-periodic-advertis.patch
