--- a/series.conf
+++ b/series.conf
@@ -57609,6 +57609,7 @@
 	patches.kabi/KVM-s390-kABI-backport-for-last_sleep_cpu.patch
 	patches.kabi/Bluetooth-HCI-Fix-tracking-of-advertisement-set-inst.patch
 	patches.kabi/Bluetooth-btusb-mediatek-Fix-kernel-crash-when-relea.patch
+	patches.kabi/Bluetooth-MGMT-fix-crash-in-set_mesh_sync-and-set_me.patch
 
 	########################################################
 	# SLE15-SP3 OOT performance patches evaluated but left
