--- a/series.conf
+++ b/series.conf
@@ -34,6 +34,7 @@
 	patches.kernel.org/6.18.1-005-locking-spinlock-debug-Fix-data-race-in-do_raw.patch
 	patches.kernel.org/6.18.1-006-crypto-zstd-fix-double-free-in-per-CPU-stream-.patch
 	patches.kernel.org/6.18.1-007-ext4-add-i_data_sem-protection-in-ext4_destroy.patch
+	patches.kernel.org/6.18.1-008-rust_binder-fix-race-condition-on-death_list.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
