KVM: SVM: Don't skip unrelated instruction if INT3/INTO is replaced (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -36,6 +36,7 @@
 	patches.kernel.org/6.18.1-007-ext4-add-i_data_sem-protection-in-ext4_destroy.patch
 	patches.kernel.org/6.18.1-008-rust_binder-fix-race-condition-on-death_list.patch
 	patches.kernel.org/6.18.1-009-comedi-pcl818-fix-null-ptr-deref-in-pcl818_ai_.patch
+	patches.kernel.org/6.18.1-010-KVM-SVM-Don-t-skip-unrelated-instruction-if-IN.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
