USB: serial: option: add Telit Cinterion FE910C04 new compositions (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -38,6 +38,7 @@
 	patches.kernel.org/6.18.1-009-comedi-pcl818-fix-null-ptr-deref-in-pcl818_ai_.patch
 	patches.kernel.org/6.18.1-010-KVM-SVM-Don-t-skip-unrelated-instruction-if-IN.patch
 	patches.kernel.org/6.18.1-011-USB-serial-option-add-Foxconn-T99W760.patch
+	patches.kernel.org/6.18.1-012-USB-serial-option-add-Telit-Cinterion-FE910C04.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
