--- a/series.conf
+++ b/series.conf
@@ -37,6 +37,7 @@
 	patches.kernel.org/6.18.1-008-rust_binder-fix-race-condition-on-death_list.patch
 	patches.kernel.org/6.18.1-009-comedi-pcl818-fix-null-ptr-deref-in-pcl818_ai_.patch
 	patches.kernel.org/6.18.1-010-KVM-SVM-Don-t-skip-unrelated-instruction-if-IN.patch
+	patches.kernel.org/6.18.1-011-USB-serial-option-add-Foxconn-T99W760.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
