--- a/series.conf
+++ b/series.conf
@@ -55,6 +55,7 @@
 	patches.kernel.org/6.18.1-026-comedi-check-device-s-attached-status-in-compa.patch
 	patches.kernel.org/6.18.1-027-staging-rtl8723bs-fix-out-of-bounds-read-in-rt.patch
 	patches.kernel.org/6.18.1-028-staging-rtl8723bs-fix-stack-buffer-overflow-in.patch
+	patches.kernel.org/6.18.1-029-staging-rtl8723bs-fix-out-of-bounds-read-in-On.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
