--- a/series.conf
+++ b/series.conf
@@ -47,6 +47,7 @@
 	patches.kernel.org/6.18.1-018-USB-serial-belkin_sa-fix-TIOCMBIS-and-TIOCMBIC.patch
 	patches.kernel.org/6.18.1-019-USB-serial-kobil_sct-fix-TIOCMBIS-and-TIOCMBIC.patch
 	patches.kernel.org/6.18.1-020-Documentation-rtla-rename-common_xxx.rst-files.patch
+	patches.kernel.org/6.18.1-021-wifi-rtl8xxxu-Add-USB-ID-2001-3328-for-D-Link-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
