--- a/series.conf
+++ b/series.conf
@@ -41,6 +41,7 @@
 	patches.kernel.org/6.18.1-012-USB-serial-option-add-Telit-Cinterion-FE910C04.patch
 	patches.kernel.org/6.18.1-013-USB-serial-option-move-Telit-0x10c7-compositio.patch
 	patches.kernel.org/6.18.1-014-USB-serial-ftdi_sio-match-on-interface-number-.patch
+	patches.kernel.org/6.18.1-015-serial-add-support-of-CPCI-cards.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
