--- a/series.conf
+++ b/series.conf
@@ -28,6 +28,7 @@
 	# Send separate patches upstream if you find a problem...
 	########################################################
 	patches.kernel.org/6.18.1-001-Documentation-process-Also-mention-Sasha-Levin.patch
+	patches.kernel.org/6.18.1-002-jbd2-avoid-bug_on-in-jbd2_journal_get_create_a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
