--- a/series.conf
+++ b/series.conf
@@ -48,6 +48,7 @@
 	patches.kernel.org/6.18.1-019-USB-serial-kobil_sct-fix-TIOCMBIS-and-TIOCMBIC.patch
 	patches.kernel.org/6.18.1-020-Documentation-rtla-rename-common_xxx.rst-files.patch
 	patches.kernel.org/6.18.1-021-wifi-rtl8xxxu-Add-USB-ID-2001-3328-for-D-Link-.patch
+	patches.kernel.org/6.18.1-022-wifi-rtw88-Add-USB-ID-2001-3329-for-D-Link-AC1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
