--- a/series.conf
+++ b/series.conf
@@ -29,6 +29,7 @@
 	########################################################
 	patches.kernel.org/6.18.1-001-Documentation-process-Also-mention-Sasha-Levin.patch
 	patches.kernel.org/6.18.1-002-jbd2-avoid-bug_on-in-jbd2_journal_get_create_a.patch
+	patches.kernel.org/6.18.1-003-ext4-refresh-inline-data-size-before-write-ope.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
