ext4: add i_data_sem protection in ext4_destroy_inline_data_nolock() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -33,6 +33,7 @@
 	patches.kernel.org/6.18.1-004-ksmbd-ipc-fix-use-after-free-in-ipc_msg_send_r.patch
 	patches.kernel.org/6.18.1-005-locking-spinlock-debug-Fix-data-race-in-do_raw.patch
 	patches.kernel.org/6.18.1-006-crypto-zstd-fix-double-free-in-per-CPU-stream-.patch
+	patches.kernel.org/6.18.1-007-ext4-add-i_data_sem-protection-in-ext4_destroy.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
