serial: sh-sci: Fix deadlock during RSCI FIFO overrun error (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -43,6 +43,7 @@
 	patches.kernel.org/6.18.1-014-USB-serial-ftdi_sio-match-on-interface-number-.patch
 	patches.kernel.org/6.18.1-015-serial-add-support-of-CPCI-cards.patch
 	patches.kernel.org/6.18.1-016-dt-bindings-serial-rsci-Drop-uart-has-rtscts-f.patch
+	patches.kernel.org/6.18.1-017-serial-sh-sci-Fix-deadlock-during-RSCI-FIFO-ov.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
