--- a/series.conf
+++ b/series.conf
@@ -50,6 +50,7 @@
 	patches.kernel.org/6.18.1-021-wifi-rtl8xxxu-Add-USB-ID-2001-3328-for-D-Link-.patch
 	patches.kernel.org/6.18.1-022-wifi-rtw88-Add-USB-ID-2001-3329-for-D-Link-AC1.patch
 	patches.kernel.org/6.18.1-023-iio-adc-ad4080-fix-chip-identification.patch
+	patches.kernel.org/6.18.1-024-comedi-c6xdigio-Fix-invalid-PNP-driver-unregis.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
