crypto: zstd - fix double-free in per-CPU stream cleanup (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -32,6 +32,7 @@
 	patches.kernel.org/6.18.1-003-ext4-refresh-inline-data-size-before-write-ope.patch
 	patches.kernel.org/6.18.1-004-ksmbd-ipc-fix-use-after-free-in-ipc_msg_send_r.patch
 	patches.kernel.org/6.18.1-005-locking-spinlock-debug-Fix-data-race-in-do_raw.patch
+	patches.kernel.org/6.18.1-006-crypto-zstd-fix-double-free-in-per-CPU-stream-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
