--- a/series.conf
+++ b/series.conf
@@ -39,6 +39,7 @@
 	patches.kernel.org/6.18.1-010-KVM-SVM-Don-t-skip-unrelated-instruction-if-IN.patch
 	patches.kernel.org/6.18.1-011-USB-serial-option-add-Foxconn-T99W760.patch
 	patches.kernel.org/6.18.1-012-USB-serial-option-add-Telit-Cinterion-FE910C04.patch
+	patches.kernel.org/6.18.1-013-USB-serial-option-move-Telit-0x10c7-compositio.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
