--- a/series.conf
+++ b/series.conf
@@ -46,6 +46,7 @@
 	patches.kernel.org/6.18.1-017-serial-sh-sci-Fix-deadlock-during-RSCI-FIFO-ov.patch
 	patches.kernel.org/6.18.1-018-USB-serial-belkin_sa-fix-TIOCMBIS-and-TIOCMBIC.patch
 	patches.kernel.org/6.18.1-019-USB-serial-kobil_sct-fix-TIOCMBIS-and-TIOCMBIC.patch
+	patches.kernel.org/6.18.1-020-Documentation-rtla-rename-common_xxx.rst-files.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
