USB: serial: belkin_sa: fix TIOCMBIS and TIOCMBIC (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -44,6 +44,7 @@
 	patches.kernel.org/6.18.1-015-serial-add-support-of-CPCI-cards.patch
 	patches.kernel.org/6.18.1-016-dt-bindings-serial-rsci-Drop-uart-has-rtscts-f.patch
 	patches.kernel.org/6.18.1-017-serial-sh-sci-Fix-deadlock-during-RSCI-FIFO-ov.patch
+	patches.kernel.org/6.18.1-018-USB-serial-belkin_sa-fix-TIOCMBIS-and-TIOCMBIC.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
