ksmbd: ipc: fix use-after-free in ipc_msg_send_request (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -30,6 +30,7 @@
 	patches.kernel.org/6.18.1-001-Documentation-process-Also-mention-Sasha-Levin.patch
 	patches.kernel.org/6.18.1-002-jbd2-avoid-bug_on-in-jbd2_journal_get_create_a.patch
 	patches.kernel.org/6.18.1-003-ext4-refresh-inline-data-size-before-write-ope.patch
+	patches.kernel.org/6.18.1-004-ksmbd-ipc-fix-use-after-free-in-ipc_msg_send_r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
