USB: serial: ftdi_sio: match on interface number for jtag (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -40,6 +40,7 @@
 	patches.kernel.org/6.18.1-011-USB-serial-option-add-Foxconn-T99W760.patch
 	patches.kernel.org/6.18.1-012-USB-serial-option-add-Telit-Cinterion-FE910C04.patch
 	patches.kernel.org/6.18.1-013-USB-serial-option-move-Telit-0x10c7-compositio.patch
+	patches.kernel.org/6.18.1-014-USB-serial-ftdi_sio-match-on-interface-number-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
