comedi: check device's attached status in compat ioctls (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -52,6 +52,7 @@
 	patches.kernel.org/6.18.1-023-iio-adc-ad4080-fix-chip-identification.patch
 	patches.kernel.org/6.18.1-024-comedi-c6xdigio-Fix-invalid-PNP-driver-unregis.patch
 	patches.kernel.org/6.18.1-025-comedi-multiq3-sanitize-config-options-in-mult.patch
+	patches.kernel.org/6.18.1-026-comedi-check-device-s-attached-status-in-compa.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
