--- a/series.conf
+++ b/series.conf
@@ -35504,6 +35504,7 @@
 	patches.suse/i2c-amd-mp2-fix-reference-leak-in-MP2-PCI-device.patch
 	patches.suse/ALSA-hda-cs35l41-Fix-NULL-pointer-dereference-in-cs3-c34b04c.patch
 	patches.suse/ALSA-firewire-motu-fix-buffer-overflow-in-hwdep-read.patch
+	patches.suse/ALSA-uapi-Fix-typo-in-asound.h-comment.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
