--- a/series.conf
+++ b/series.conf
@@ -35505,6 +35505,7 @@
 	patches.suse/ALSA-hda-cs35l41-Fix-NULL-pointer-dereference-in-cs3-c34b04c.patch
 	patches.suse/ALSA-firewire-motu-fix-buffer-overflow-in-hwdep-read.patch
 	patches.suse/ALSA-uapi-Fix-typo-in-asound.h-comment.patch
+	patches.suse/ALSA-firewire-motu-add-bounds-check-in-put_user-loop.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
