ASoC: ak5558: Disable regulator when error happens (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35507,6 +35507,7 @@
 	patches.suse/ALSA-uapi-Fix-typo-in-asound.h-comment.patch
 	patches.suse/ALSA-firewire-motu-add-bounds-check-in-put_user-loop.patch
 	patches.suse/ASoC-ak4458-Disable-regulator-when-error-happens.patch
+	patches.suse/ASoC-ak5558-Disable-regulator-when-error-happens.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
