--- a/series.conf
+++ b/series.conf
@@ -56774,6 +56774,7 @@
 	patches.suse/drm-amdgpu-disable-peer-to-peer-access-for-DCC-enabl.patch
 	patches.suse/drm-amd-display-Allow-VRR-params-change-if-unsynced-.patch
 	patches.suse/drm-amdkfd-relax-checks-for-over-allocation-of-save-.patch
+	patches.suse/drm-amdkfd-Fix-GPU-mappings-for-APU-after-prefetch.patch
 	patches.suse/drm-vmwgfx-Validate-command-header-size-against-SVGA.patch
 	patches.suse/drm-i915-dp_mst-Disable-Panel-Replay.patch
 	patches.suse/x86-CPU-AMD-Add-additional-fixed-RDSEED-microcode-re.patch
