--- a/series.conf
+++ b/series.conf
@@ -56776,6 +56776,7 @@
 	patches.suse/drm-amdkfd-relax-checks-for-over-allocation-of-save-.patch
 	patches.suse/drm-amdkfd-Fix-GPU-mappings-for-APU-after-prefetch.patch
 	patches.suse/drm-vmwgfx-Validate-command-header-size-against-SVGA.patch
+	patches.suse/drm-vmwgfx-Use-kref-in-vmw_bo_dirty.patch
 	patches.suse/drm-i915-dp_mst-Disable-Panel-Replay.patch
 	patches.suse/x86-CPU-AMD-Add-additional-fixed-RDSEED-microcode-re.patch
 	patches.suse/mtdchar-fix-integer-overflow-in-read-write-ioctls.patch
