--- a/series.conf
+++ b/series.conf
@@ -13573,6 +13573,7 @@
 	patches.suse/drm-amdkfd-relax-checks-for-over-allocation-of-save-.patch
 	patches.suse/drm-amdkfd-Fix-GPU-mappings-for-APU-after-prefetch.patch
 	patches.suse/drm-vmwgfx-Validate-command-header-size-against-SVGA.patch
+	patches.suse/drm-vmwgfx-Use-kref-in-vmw_bo_dirty.patch
 	patches.suse/drm-i915-dp_mst-Disable-Panel-Replay.patch
 	patches.suse/pnfs-Fix-TLS-logic-in-_nfs4_pnfs_v4_ds_connect.patch
 	patches.suse/pnfs-Set-transport-security-policy-to-RPC_XPRTSEC_NONE-unless-using-TLS.patch
