--- a/series.conf
+++ b/series.conf
@@ -13587,6 +13587,7 @@
 	patches.suse/mtd-rawnand-cadence-fix-DMA-device-NULL-pointer-dere.patch
 	patches.suse/mtd-onenand-Pass-correct-pointer-to-IRQ-handler.patch
 	patches.suse/HID-quirks-work-around-VID-PID-conflict-for-0x4c4a-0.patch
+	patches.suse/HID-apple-Add-SONiX-AK870-PRO-to-non_apple_keyboards.patch
 	patches.suse/HID-amd_sfh-Stop-sensor-before-starting.patch
 	patches.suse/HID-hid-ntrig-Prevent-memory-leak-in-ntrig_report_ve.patch
 	patches.suse/HID-playstation-Fix-memory-leak-in-dualshock4_get_ca.patch
