--- a/series.conf
+++ b/series.conf
@@ -13898,6 +13898,7 @@
 	patches.suse/USB-serial-kobil_sct-fix-TIOCMBIS-and-TIOCMBIC.patch
 	patches.suse/USB-serial-ftdi_sio-match-on-interface-number-for-jt.patch
 	patches.suse/USB-serial-option-add-Foxconn-T99W760.patch
+	patches.suse/USB-serial-option-add-Telit-Cinterion-FE910C04-new-c.patch
 	patches.suse/usb-gadget-tegra-xudc-Always-reinitialize-data-toggl.patch
 	patches.suse/staging-fbtft-core-fix-potential-memory-leak-in-fbtf.patch
 	patches.suse/clk-renesas-cpg-mssr-Add-missing-1ms-delay-into-rese.patch
