--- a/series.conf
+++ b/series.conf
@@ -13590,6 +13590,7 @@
 	patches.suse/HID-apple-Add-SONiX-AK870-PRO-to-non_apple_keyboards.patch
 	patches.suse/HID-amd_sfh-Stop-sensor-before-starting.patch
 	patches.suse/HID-hid-ntrig-Prevent-memory-leak-in-ntrig_report_ve.patch
+	patches.suse/HID-hid-input-Extend-Elan-ignore-battery-quirk-to-US.patch
 	patches.suse/HID-playstation-Fix-memory-leak-in-dualshock4_get_ca.patch
 	patches.suse/HID-uclogic-Fix-potential-memory-leak-in-error-path.patch
 	patches.suse/idpf-fix-possible-vport_config-NULL-pointer-deref-in.patch
