samples: work around glibc redefining some of our defines wrong (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13602,6 +13602,7 @@
 	patches.suse/platform-x86-msi-wmi-platform-Fix-typo-in-WMI-GUID.patch
 	patches.suse/platform-x86-intel-speed_select_if-Convert-PCIBIOS_-.patch
 	patches.suse/platform-x86-acer-wmi-Ignore-backlight-event.patch
+	patches.suse/samples-work-around-glibc-redefining-some-of-our-def.patch
 	patches.suse/drm-tegra-dc-Fix-reference-leak-in-tegra_dc_couple.patch
 	patches.suse/drm-tegra-Add-call-to-put_pid.patch
 	patches.suse/Revert-drm-tegra-dsi-Clear-enable-register-if-powere.patch
