HID: elecom: Add support for ELECOM M-XT3URBK (018F) (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13591,6 +13591,7 @@
 	patches.suse/HID-amd_sfh-Stop-sensor-before-starting.patch
 	patches.suse/HID-hid-ntrig-Prevent-memory-leak-in-ntrig_report_ve.patch
 	patches.suse/HID-hid-input-Extend-Elan-ignore-battery-quirk-to-US.patch
+	patches.suse/HID-elecom-Add-support-for-ELECOM-M-XT3URBK-018F.patch
 	patches.suse/HID-playstation-Fix-memory-leak-in-dualshock4_get_ca.patch
 	patches.suse/HID-uclogic-Fix-potential-memory-leak-in-error-path.patch
 	patches.suse/idpf-fix-possible-vport_config-NULL-pointer-deref-in.patch
