--- a/series.conf
+++ b/series.conf
@@ -13938,6 +13938,7 @@
 	patches.suse/ASoC-ak4458-Disable-regulator-when-error-happens.patch
 	patches.suse/ASoC-ak5558-Disable-regulator-when-error-happens.patch
 	patches.suse/ASoC-codecs-wcd938x-fix-OF-node-leaks-on-probe-failu.patch
+	patches.suse/ASoC-codecs-wcd939x-fix-OF-node-leaks-on-probe-failu.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
