platform/x86: huawei-wmi: add keys for HONOR models (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13595,6 +13595,7 @@
 	patches.suse/HID-playstation-Fix-memory-leak-in-dualshock4_get_ca.patch
 	patches.suse/HID-uclogic-Fix-potential-memory-leak-in-error-path.patch
 	patches.suse/idpf-fix-possible-vport_config-NULL-pointer-deref-in.patch
+	patches.suse/platform-x86-huawei-wmi-add-keys-for-HONOR-models.patch
 	patches.suse/platform-x86-msi-wmi-platform-Only-load-on-MSI-devic.patch
 	patches.suse/platform-x86-msi-wmi-platform-Fix-typo-in-WMI-GUID.patch
 	patches.suse/platform-x86-intel-speed_select_if-Convert-PCIBIOS_-.patch
