--- a/series.conf
+++ b/series.conf
@@ -13562,6 +13562,7 @@
 	patches.suse/ALSA-usb-audio-Add-native-DSD-quirks-for-PureAudio-D.patch
 	patches.suse/regulator-fixed-fix-GPIO-descriptor-leak-on-register.patch
 	patches.suse/spi-Try-to-get-ACPI-GPIO-IRQ-earlier.patch
+	patches.suse/spi-imx-keep-dma-request-disabled-before-dma-transfe.patch
 	patches.suse/acpi-srat-Fix-incorrect-device-handle-check-for-Gene.patch
 	patches.suse/acpi-hmat-Fix-lockdep-warning-for-hmem_register_reso.patch
 	patches.suse/mmc-sdhci-of-dwcmshc-Change-DLL_STRBIN_TAPNUM_DEFAUL.patch
