--- a/series.conf
+++ b/series.conf
@@ -13726,6 +13726,7 @@
 	patches.suse/wifi-cw1200-Fix-potential-memory-leak-in-cw1200_bh_r.patch
 	patches.suse/net-phy-adin1100-Fix-software-power-down-ready-condi.patch
 	patches.suse/wifi-mac80211-fix-CMAC-functions-not-handling-errors.patch
+	patches.suse/wifi-rtl8xxxu-Add-USB-ID-2001-3328-for-D-Link-AN3U-r.patch
 	patches.suse/wifi-rtl818x-Fix-potential-memory-leaks-in-rtl8180_i.patch
 	patches.suse/wifi-rtl818x-rtl8187-Fix-potential-buffer-underflow-.patch
 	patches.suse/wifi-mt76-Fix-DTS-power-limits-on-little-endian-syst.patch
