--- a/series.conf
+++ b/series.conf
@@ -13932,6 +13932,7 @@
 	patches.suse/regulator-fixed-Rely-on-the-core-freeing-the-enable-.patch
 	patches.suse/ALSA-hda-cs35l41-Fix-NULL-pointer-dereference-in-cs3-c34b04c.patch
 	patches.suse/ALSA-firewire-motu-fix-buffer-overflow-in-hwdep-read.patch
+	patches.suse/ALSA-uapi-Fix-typo-in-asound.h-comment.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
