--- a/series.conf
+++ b/series.conf
@@ -13887,6 +13887,7 @@
 	patches.suse/comedi-multiq3-sanitize-config-options-in-multiq3_at.patch
 	patches.suse/comedi-pcl818-fix-null-ptr-deref-in-pcl818_ai_cancel.patch
 	patches.suse/intel_th-Fix-error-handling-in-intel_th_output_open.patch
+	patches.suse/serial-add-support-of-CPCI-cards.patch
 	patches.suse/USB-Fix-descriptor-count-when-handling-invalid-MBIM-.patch
 	patches.suse/usb-dwc3-dwc3_power_off_all_roothub_ports-Use-iorema.patch
 	patches.suse/usb-chaoskey-fix-locking-for-O_NONBLOCK.patch
