--- a/series.conf
+++ b/series.conf
@@ -13936,6 +13936,7 @@
 	patches.suse/ALSA-firewire-motu-add-bounds-check-in-put_user-loop.patch
 	patches.suse/ASoC-bcm-bcm63xx-pcm-whistler-Check-return-value-of-.patch
 	patches.suse/ASoC-ak4458-Disable-regulator-when-error-happens.patch
+	patches.suse/ASoC-ak5558-Disable-regulator-when-error-happens.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
