--- a/series.conf
+++ b/series.conf
@@ -13559,6 +13559,7 @@
 	patches.suse/ASoC-cs4271-Fix-regulator-leak-on-probe-failure.patch
 	patches.suse/ASoC-codecs-va-macro-fix-resource-leak-in-probe-erro.patch
 	patches.suse/ASoC-tas2781-fix-getting-the-wrong-device-number.patch
+	patches.suse/ALSA-usb-audio-Add-native-DSD-quirks-for-PureAudio-D.patch
 	patches.suse/regulator-fixed-fix-GPIO-descriptor-leak-on-register.patch
 	patches.suse/spi-Try-to-get-ACPI-GPIO-IRQ-earlier.patch
 	patches.suse/acpi-srat-Fix-incorrect-device-handle-check-for-Gene.patch
