ASoC: codecs: wcd938x: fix OF node leaks on probe failure (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13937,6 +13937,7 @@
 	patches.suse/ASoC-bcm-bcm63xx-pcm-whistler-Check-return-value-of-.patch
 	patches.suse/ASoC-ak4458-Disable-regulator-when-error-happens.patch
 	patches.suse/ASoC-ak5558-Disable-regulator-when-error-happens.patch
+	patches.suse/ASoC-codecs-wcd938x-fix-OF-node-leaks-on-probe-failu.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
