--- a/series.conf
+++ b/series.conf
@@ -13896,6 +13896,7 @@
 	patches.suse/usb-phy-Initialize-struct-usb_phy-list_head.patch
 	patches.suse/USB-serial-belkin_sa-fix-TIOCMBIS-and-TIOCMBIC.patch
 	patches.suse/USB-serial-kobil_sct-fix-TIOCMBIS-and-TIOCMBIC.patch
+	patches.suse/USB-serial-ftdi_sio-match-on-interface-number-for-jt.patch
 	patches.suse/usb-gadget-tegra-xudc-Always-reinitialize-data-toggl.patch
 	patches.suse/staging-fbtft-core-fix-potential-memory-leak-in-fbtf.patch
 	patches.suse/clk-renesas-cpg-mssr-Add-missing-1ms-delay-into-rese.patch
