--- a/series.conf
+++ b/series.conf
@@ -13727,6 +13727,7 @@
 	patches.suse/net-phy-adin1100-Fix-software-power-down-ready-condi.patch
 	patches.suse/wifi-mac80211-fix-CMAC-functions-not-handling-errors.patch
 	patches.suse/wifi-rtl8xxxu-Add-USB-ID-2001-3328-for-D-Link-AN3U-r.patch
+	patches.suse/wifi-rtw88-Add-USB-ID-2001-3329-for-D-Link-AC13U-rev.patch
 	patches.suse/wifi-rtl818x-Fix-potential-memory-leaks-in-rtl8180_i.patch
 	patches.suse/wifi-rtl818x-rtl8187-Fix-potential-buffer-underflow-.patch
 	patches.suse/wifi-mt76-Fix-DTS-power-limits-on-little-endian-syst.patch
