--- a/series.conf
+++ b/series.conf
@@ -13619,6 +13619,7 @@
 	patches.suse/drm-xe-Remove-duplicate-DRM_EXEC-selection-from-Kcon.patch
 	patches.suse/pinctrl-realtek-Select-REGMAP_MMIO-for-RTD-driver.patch
 	patches.suse/pinctrl-cirrus-Fix-fwnode-leak-in-cs42l43_pin_probe.patch
+	patches.suse/pinctrl-qcom-msm-Fix-deadlock-in-pinmux-configuratio.patch
 	patches.suse/pinctrl-s32cc-fix-uninitialized-memory-in-s32_pinctr.patch
 	patches.suse/pinctrl-s32cc-initialize-gpio_pin_config-list-after-.patch
 	patches.suse/ata-libata-scsi-Add-missing-scsi_device_put-in-ata_s.patch
