--- a/series.conf
+++ b/series.conf
@@ -13597,6 +13597,7 @@
 	patches.suse/idpf-fix-possible-vport_config-NULL-pointer-deref-in.patch
 	patches.suse/platform-x86-huawei-wmi-add-keys-for-HONOR-models.patch
 	patches.suse/platform-x86-amd-pmc-Add-spurious_8042-to-Xbox-Ally.patch
+	patches.suse/platform-x86-amd-pmc-Add-Lenovo-Legion-Go-2-to-pmc-q.patch
 	patches.suse/platform-x86-msi-wmi-platform-Only-load-on-MSI-devic.patch
 	patches.suse/platform-x86-msi-wmi-platform-Fix-typo-in-WMI-GUID.patch
 	patches.suse/platform-x86-intel-speed_select_if-Convert-PCIBIOS_-.patch
