--- a/series.conf
+++ b/series.conf
@@ -13934,6 +13934,7 @@
 	patches.suse/ALSA-firewire-motu-fix-buffer-overflow-in-hwdep-read.patch
 	patches.suse/ALSA-uapi-Fix-typo-in-asound.h-comment.patch
 	patches.suse/ALSA-firewire-motu-add-bounds-check-in-put_user-loop.patch
+	patches.suse/ASoC-bcm-bcm63xx-pcm-whistler-Check-return-value-of-.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
