drm/i915: Fix format string truncation warning (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57053,6 +57053,7 @@
 	patches.suse/ASoC-ak5558-Disable-regulator-when-error-happens.patch
 	patches.suse/ASoC-codecs-wcd938x-fix-OF-node-leaks-on-probe-failu.patch
 	patches.suse/drm-amdkfd-Use-huge-page-size-to-check-split-svm-ran.patch
+	patches.suse/drm-i915-Fix-format-string-truncation-warning.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
