drm/mgag200: Fix big-endian support (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13947,6 +13947,7 @@
 	patches.suse/drm-nouveau-Replace-sprintf-with-sysfs_emit.patch
 	patches.suse/drm-ttm-Avoid-NULL-pointer-deref-for-evicted-BOs.patch
 	patches.suse/drm-tilcdc-Fix-removal-actions-in-case-of-failed-pro.patch
+	patches.suse/drm-mgag200-Fix-big-endian-support.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
