drm/amdkfd: Use huge page size to check split svm range alignment (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13940,6 +13940,7 @@
 	patches.suse/ASoC-codecs-wcd938x-fix-OF-node-leaks-on-probe-failu.patch
 	patches.suse/ASoC-codecs-wcd939x-fix-OF-node-leaks-on-probe-failu.patch
 	patches.suse/rtc-gamecube-Check-the-return-value-of-ioremap.patch
+	patches.suse/drm-amdkfd-Use-huge-page-size-to-check-split-svm-ran.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
