drm/ttm: Avoid NULL pointer deref for evicted BOs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13945,6 +13945,7 @@
 	patches.suse/drm-plane-Fix-IS_ERR-vs-NULL-check-in-drm_plane_crea.patch
 	patches.suse/drm-nouveau-refactor-deprecated-strcpy.patch
 	patches.suse/drm-nouveau-Replace-sprintf-with-sysfs_emit.patch
+	patches.suse/drm-ttm-Avoid-NULL-pointer-deref-for-evicted-BOs.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
