drm: nouveau: Replace sprintf() with sysfs_emit() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13944,6 +13944,7 @@
 	patches.suse/drm-i915-Fix-format-string-truncation-warning.patch
 	patches.suse/drm-plane-Fix-IS_ERR-vs-NULL-check-in-drm_plane_crea.patch
 	patches.suse/drm-nouveau-refactor-deprecated-strcpy.patch
+	patches.suse/drm-nouveau-Replace-sprintf-with-sysfs_emit.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
