drm/tilcdc: Fix removal actions in case of failed probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -13946,6 +13946,7 @@
 	patches.suse/drm-nouveau-refactor-deprecated-strcpy.patch
 	patches.suse/drm-nouveau-Replace-sprintf-with-sysfs_emit.patch
 	patches.suse/drm-ttm-Avoid-NULL-pointer-deref-for-evicted-BOs.patch
+	patches.suse/drm-tilcdc-Fix-removal-actions-in-case-of-failed-pro.patch
 
 	# mkp/scsi queue
 	patches.suse/scsi-lpfc-Update-various-NPIV-diagnostic-log-messagi.patch
