platform/x86: acer-wmi: Ignore backlight event (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12581,6 +12581,7 @@
 	patches.kernel.org/6.12.62-029-HID-hid-input-Extend-Elan-ignore-battery-quir.patch
 	patches.kernel.org/6.12.62-030-nvme-fix-admin-request_queue-lifetime.patch
 	patches.kernel.org/6.12.62-031-pinctrl-qcom-msm-Fix-deadlock-in-pinmux-confi.patch
+	patches.kernel.org/6.12.62-032-platform-x86-acer-wmi-Ignore-backlight-event.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
