LoongArch: Mask all interrupts during kexec/kdump (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12587,6 +12587,7 @@
 	patches.kernel.org/6.12.62-035-platform-x86-amd-pmc-Add-Lenovo-Legion-Go-2-t.patch
 	patches.kernel.org/6.12.62-036-platform-x86-amd-pmc-Add-spurious_8042-to-Xbo.patch
 	patches.kernel.org/6.12.62-037-HID-elecom-Add-support-for-ELECOM-M-XT3URBK-0.patch
+	patches.kernel.org/6.12.62-038-LoongArch-Mask-all-interrupts-during-kexec-kd.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
