USB: serial: option: add Foxconn T99W760 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12562,6 +12562,7 @@
 	patches.kernel.org/6.12.62-010-ext4-add-i_data_sem-protection-in-ext4_destro.patch
 	patches.kernel.org/6.12.62-011-comedi-pcl818-fix-null-ptr-deref-in-pcl818_ai.patch
 	patches.kernel.org/6.12.62-012-KVM-SVM-Don-t-skip-unrelated-instruction-if-I.patch
+	patches.kernel.org/6.12.62-013-USB-serial-option-add-Foxconn-T99W760.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
