smb: fix invalid username check in smb3_fs_context_parse_param() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12574,6 +12574,7 @@
 	patches.kernel.org/6.12.62-022-spi-imx-keep-dma-request-disabled-before-dma-.patch
 	patches.kernel.org/6.12.62-023-drm-vmwgfx-Use-kref-in-vmw_bo_dirty.patch
 	patches.kernel.org/6.12.62-024-Bluetooth-btrtl-Avoid-loading-the-config-file.patch
+	patches.kernel.org/6.12.62-025-smb-fix-invalid-username-check-in-smb3_fs_con.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
