wifi: rtw88: Add USB ID 2001:3329 for D-Link AC13U rev. A1 (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12590,6 +12590,7 @@
 	patches.kernel.org/6.12.62-038-LoongArch-Mask-all-interrupts-during-kexec-kd.patch
 	patches.kernel.org/6.12.62-039-samples-work-around-glibc-redefining-some-of-.patch
 	patches.kernel.org/6.12.62-040-wifi-rtl8xxxu-Add-USB-ID-2001-3328-for-D-Link.patch
+	patches.kernel.org/6.12.62-041-wifi-rtw88-Add-USB-ID-2001-3329-for-D-Link-AC.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
