HID: hid-input: Extend Elan ignore battery quirk to USB (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12578,6 +12578,7 @@
 	patches.kernel.org/6.12.62-026-drm-amdkfd-Fix-GPU-mappings-for-APU-after-pre.patch
 	patches.kernel.org/6.12.62-027-ALSA-usb-audio-Add-native-DSD-quirks-for-Pure.patch
 	patches.kernel.org/6.12.62-028-bfs-Reconstruct-file-type-when-loading-from-d.patch
+	patches.kernel.org/6.12.62-029-HID-hid-input-Extend-Elan-ignore-battery-quir.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
