xfrm: also call xfrm_state_delete_tunnel at destroy time for states that were never added (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12552,6 +12552,7 @@
 	patches.kernel.org/6.12.61-132-Linux-6.12.61.patch
 	patches.kernel.org/6.12.62-001-xfrm-delete-x-tunnel-as-we-delete-x.patch
 	patches.kernel.org/6.12.62-002-Revert-xfrm-destroy-xfrm_state-synchronously-.patch
+	patches.kernel.org/6.12.62-003-xfrm-also-call-xfrm_state_delete_tunnel-at-de.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
