USB: serial: ftdi_sio: match on interface number for jtag (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12565,6 +12565,7 @@
 	patches.kernel.org/6.12.62-013-USB-serial-option-add-Foxconn-T99W760.patch
 	patches.kernel.org/6.12.62-014-USB-serial-option-add-Telit-Cinterion-FE910C0.patch
 	patches.kernel.org/6.12.62-015-USB-serial-option-move-Telit-0x10c7-compositi.patch
+	patches.kernel.org/6.12.62-016-USB-serial-ftdi_sio-match-on-interface-number.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
