ext4: add i_data_sem protection in ext4_destroy_inline_data_nolock() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12559,6 +12559,7 @@
 	patches.kernel.org/6.12.62-007-ext4-refresh-inline-data-size-before-write-op.patch
 	patches.kernel.org/6.12.62-008-ksmbd-ipc-fix-use-after-free-in-ipc_msg_send_.patch
 	patches.kernel.org/6.12.62-009-locking-spinlock-debug-Fix-data-race-in-do_ra.patch
+	patches.kernel.org/6.12.62-010-ext4-add-i_data_sem-protection-in-ext4_destro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
