xfrm: flush all states in xfrm_state_fini (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12553,6 +12553,7 @@
 	patches.kernel.org/6.12.62-001-xfrm-delete-x-tunnel-as-we-delete-x.patch
 	patches.kernel.org/6.12.62-002-Revert-xfrm-destroy-xfrm_state-synchronously-.patch
 	patches.kernel.org/6.12.62-003-xfrm-also-call-xfrm_state_delete_tunnel-at-de.patch
+	patches.kernel.org/6.12.62-004-xfrm-flush-all-states-in-xfrm_state_fini.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
