comedi: check device's attached status in compat ioctls (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12593,6 +12593,7 @@
 	patches.kernel.org/6.12.62-041-wifi-rtw88-Add-USB-ID-2001-3329-for-D-Link-AC.patch
 	patches.kernel.org/6.12.62-042-comedi-c6xdigio-Fix-invalid-PNP-driver-unregi.patch
 	patches.kernel.org/6.12.62-043-comedi-multiq3-sanitize-config-options-in-mul.patch
+	patches.kernel.org/6.12.62-044-comedi-check-device-s-attached-status-in-comp.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
