xfrm: delete x->tunnel as we delete x (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12550,6 +12550,7 @@
 	patches.kernel.org/6.12.61-130-drm-i915-dp-Initialize-the-source-OUI-write-t.patch
 	patches.kernel.org/6.12.61-131-spi-spi-nxp-fspi-Check-return-value-of-devm_m.patch
 	patches.kernel.org/6.12.61-132-Linux-6.12.61.patch
+	patches.kernel.org/6.12.62-001-xfrm-delete-x-tunnel-as-we-delete-x.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
