Bluetooth: btrtl: Avoid loading the config file on security chips (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -12573,6 +12573,7 @@
 	patches.kernel.org/6.12.62-021-spi-xilinx-increase-number-of-retries-before-.patch
 	patches.kernel.org/6.12.62-022-spi-imx-keep-dma-request-disabled-before-dma-.patch
 	patches.kernel.org/6.12.62-023-drm-vmwgfx-Use-kref-in-vmw_bo_dirty.patch
+	patches.kernel.org/6.12.62-024-Bluetooth-btrtl-Avoid-loading-the-config-file.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
